// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GoProject with custom versions > synthesizes 1`] = `
{
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

* text=auto eol=lf",
  ".github/workflows/build.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: build
on:
  push:
    branches:
      - main
  pull_request:
    types:
      - opened
      - edited
      - synchronize
      - reopened
    branches:
      - main
jobs:
  build:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      patch_created: \${{ steps.create_patch.outputs.patch_created }}
    steps:
      - name: Checkout
        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd
        with:
          fetch-depth: 0
      - name: Set up Go
        uses: actions/setup-go@4b73464bb391d4059bd26b0524d20df3927bd417
        with:
          go-version: "1.22"
      - name: Format Code
        run: go fmt ./...
      - name: Find mutations
        id: create_patch
        run: |-
          git add .
          git diff --staged --patch --exit-code > repo.patch || echo "patch_created=true" >> $GITHUB_OUTPUT
        shell: bash
        working-directory: ./
      - name: Upload patch
        if: steps.create_patch.outputs.patch_created
        uses: actions/upload-artifact@v4.6.2
        with:
          name: repo.patch
          path: repo.patch
          overwrite: true
      - name: Build
        run: go build ./...
      - name: Tests
        run: go test -v ./...
      - name: Fail build on mutation
        if: steps.create_patch.outputs.patch_created
        run: |-
          echo "::error::Files were changed during build (see build log). If this was triggered from a fork, you will need to update your branch."
          cat repo.patch
          exit 1
  self-mutation:
    needs: build
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: always() && needs.build.outputs.patch_created && !(github.event.pull_request.head.repo.full_name != github.repository)
    steps:
      - name: Generate token
        id: generate_token
        uses: actions/create-github-app-token@3ff1caaa28b64c9cc276ce0a02e2ff584f3900c5
        with:
          app-id: \${{ secrets.PROJEN_APP_ID }}
          private-key: \${{ secrets.PROJEN_APP_PRIVATE_KEY }}
          permission-pull-requests: write
          permission-contents: write
      - name: Checkout
        uses: actions/checkout@v5
        with:
          token: \${{ steps.generate_token.outputs.token }}
          ref: \${{ github.event.pull_request.head.ref }}
          repository: \${{ github.event.pull_request.head.repo.full_name }}
      - name: Download patch
        uses: actions/download-artifact@v5
        with:
          name: repo.patch
          path: \${{ runner.temp }}
      - name: Apply patch
        run: '[ -s \${{ runner.temp }}/repo.patch ] && git apply \${{ runner.temp }}/repo.patch || echo "Empty patch. Skipping."'
      - name: Set git identity
        run: |-
          git config user.name "github-actions"
          git config user.email "github-actions@github.com"
      - name: Push changes
        env:
          PULL_REQUEST_REF: \${{ github.event.pull_request.head.ref }}
        run: |-
          git add .
          git commit -s -m "chore: self mutation"
          git push origin HEAD:$PULL_REQUEST_REF
",
  ".github/workflows/datadog-software-composition-analysis.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: Datadog-Software-Composition-Analysis
on:
  push: {}
jobs:
  software-composition-analysis:
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Checkout
        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd
        with:
          fetch-depth: 0
      - name: Check imported libraries are secure and compliant
        uses: DataDog/datadog-sca-github-action@d871ffeaa1a9693e935d5e66f7440782320e74ea
        with:
          dd_app_key: \${{ secrets.DD_APP_KEY }}
          dd_api_key: \${{ secrets.DD_API_KEY }}
          dd_site: datadoghq.eu
          dd_service: test-project-custom-versions
permissions: {}
",
  ".github/workflows/datadog-static-analysis.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: Datadog-Static-Analysis
on:
  push: {}
jobs:
  static-analysis:
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Checkout
        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd
        with:
          fetch-depth: 0
      - name: Check code meets quality and security standards
        uses: DataDog/datadog-static-analyzer-github-action@506d966f01f45874d7a53d00a0c300f650e91e39
        with:
          dd_app_key: \${{ secrets.DD_APP_KEY }}
          dd_api_key: \${{ secrets.DD_API_KEY }}
          dd_site: datadoghq.eu
          cpu_count: 2
          enable_performance_statistics: true
permissions: {}
",
  ".github/workflows/lint.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: lint
on:
  push:
    branches:
      - main
  pull_request:
    types:
      - opened
      - edited
      - synchronize
      - reopened
    branches:
      - main
jobs:
  lint:
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Checkout
        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd
        with:
          fetch-depth: 0
      - name: Set up Go
        uses: actions/setup-go@4b73464bb391d4059bd26b0524d20df3927bd417
        with:
          go-version: "1.25"
      - name: Run golangci-lint
        uses: golangci/golangci-lint-action@1e7e51e771db61008b38414a730f564565cf7c20
        with:
          version: v2.10.1
",
  ".github/workflows/projen-synth.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: Projen-Synth
on:
  push:
    branches:
      - main
  pull_request:
    types:
      - opened
      - edited
      - synchronize
      - reopened
    branches:
      - main
jobs:
  build:
    runs-on: ubuntu-latest
    permissions:
      contents: write
      packages: read
    outputs:
      self_mutation_happened: \${{ steps.self_mutation.outputs.self_mutation_happened }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd
        with:
          fetch-depth: 0
      - name: Setup pnpm
        uses: pnpm/action-setup@c5ba7f7862a0f64c1b1a05fbac13e0b8e86ba08c
        with:
          version: 11.0.0-alpha.12
      - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020
        with:
          node-version: 24.9.0
          registry-url: https://npm.pkg.github.com
          cache: pnpm
      - name: Install dependencies
        env:
          NODE_AUTH_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        run: pnpm i --frozen-lockfile
      - name: Run projen
        run: pnpm run projen
      - name: Find mutations
        id: self_mutation
        run: |-
          git add .
          git diff --staged --patch --exit-code > repo.patch || echo "self_mutation_happened=true" >> $GITHUB_OUTPUT
        shell: bash
        working-directory: ./
      - name: Upload patch
        if: steps.self_mutation.outputs.self_mutation_happened
        uses: actions/upload-artifact@v4.6.2
        with:
          name: repo.patch
          path: repo.patch
          overwrite: true
      - name: Fail build on mutation
        if: steps.self_mutation.outputs.self_mutation_happened
        run: |-
          echo "::error::Files were changed during build (see build log). If this was triggered from a fork, you will need to update your branch."
          cat repo.patch
          exit 1
  self-mutation:
    needs: build
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: always() && needs.build.outputs.self_mutation_happened && !(github.event.pull_request.head.repo.full_name != github.repository)
    steps:
      - name: Generate token
        id: generate_token
        uses: actions/create-github-app-token@3ff1caaa28b64c9cc276ce0a02e2ff584f3900c5
        with:
          app-id: \${{ secrets.PROJEN_APP_ID }}
          private-key: \${{ secrets.PROJEN_APP_PRIVATE_KEY }}
          permission-pull-requests: write
          permission-contents: write
          permission-workflows: write
      - name: Checkout
        uses: actions/checkout@v5
        with:
          token: \${{ steps.generate_token.outputs.token }}
          ref: \${{ github.event.pull_request.head.ref }}
          repository: \${{ github.event.pull_request.head.repo.full_name }}
      - name: Download patch
        uses: actions/download-artifact@v5
        with:
          name: repo.patch
          path: \${{ runner.temp }}
      - name: Apply patch
        run: '[ -s \${{ runner.temp }}/repo.patch ] && git apply \${{ runner.temp }}/repo.patch || echo "Empty patch. Skipping."'
      - name: Set git identity
        run: |-
          git config user.name "github-actions"
          git config user.email "github-actions@github.com"
      - name: Push changes
        env:
          PULL_REQUEST_REF: \${{ github.event.pull_request.head.ref }}
        run: |-
          git add .
          git commit -s -m "chore: self mutation"
          git push origin HEAD:$PULL_REQUEST_REF
",
  ".github/workflows/pull-request-lint.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: pull-request-lint
on:
  pull_request_target:
    types:
      - labeled
      - opened
      - synchronize
      - reopened
      - ready_for_review
      - edited
  merge_group: {}
jobs:
  validate:
    name: Validate PR title
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
    if: (github.event_name == 'pull_request' || github.event_name == 'pull_request_target')
    steps:
      - uses: amannn/action-semantic-pull-request@v6
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        with:
          types: |-
            feat
            fix
            chore
            refactor
            build
            docs
            ci
            perf
            style
            test
          requireScope: true
",
  ".github/workflows/upgrade-nodejs-dependencies.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: Upgrade-NodeJS-dependencies
on:
  workflow_dispatch: {}
  schedule:
    - cron: 0 0 3 * *
jobs:
  upgrade:
    runs-on: ubuntu-latest
    permissions:
      contents: read
      packages: read
    outputs:
      patch_created: \${{ steps.create_patch.outputs.patch_created }}
    steps:
      - name: Checkout
        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd
        with:
          fetch-depth: 0
      - name: Setup pnpm
        uses: pnpm/action-setup@c5ba7f7862a0f64c1b1a05fbac13e0b8e86ba08c
        with:
          version: 11.0.0-alpha.12
      - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020
        with:
          node-version: 24.9.0
          registry-url: https://npm.pkg.github.com
          cache: pnpm
      - name: Install dependencies
        env:
          NODE_AUTH_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        run: pnpm i --frozen-lockfile
      - name: Upgrade dependencies
        env:
          NODE_AUTH_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        run: pnpm dlx npm-check-updates@19 --upgrade --target=latest
      - name: Install dependencies
        env:
          NODE_AUTH_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        run: pnpm i --no-frozen-lockfile
      - name: Run projen
        run: pnpm run projen
      - name: Find mutations
        id: create_patch
        run: |-
          git add .
          git diff --staged --patch --exit-code > repo.patch || echo "patch_created=true" >> $GITHUB_OUTPUT
        shell: bash
        working-directory: ./
      - name: Upload patch
        if: steps.create_patch.outputs.patch_created
        uses: actions/upload-artifact@v4.6.2
        with:
          name: repo.patch
          path: repo.patch
          overwrite: true
  pr:
    name: Create Pull Request
    needs: upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: read
    if: \${{ needs.upgrade.outputs.patch_created }}
    steps:
      - name: Generate token
        id: generate_token
        uses: actions/create-github-app-token@3ff1caaa28b64c9cc276ce0a02e2ff584f3900c5
        with:
          app-id: \${{ secrets.PROJEN_APP_ID }}
          private-key: \${{ secrets.PROJEN_APP_PRIVATE_KEY }}
      - name: Checkout
        uses: actions/checkout@v5
      - name: Download patch
        uses: actions/download-artifact@v5
        with:
          name: repo.patch
          path: \${{ runner.temp }}
      - name: Apply patch
        run: '[ -s \${{ runner.temp }}/repo.patch ] && git apply \${{ runner.temp }}/repo.patch || echo "Empty patch. Skipping."'
      - name: Set git identity
        run: |-
          git config user.name "github-actions[bot]"
          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
      - name: Create Pull Request
        id: create-pr
        uses: peter-evans/create-pull-request@v7
        with:
          token: \${{ steps.generate_token.outputs.token }}
          commit-message: |-
            chore(deps): upgrade dependencies

            Upgrades project dependencies. See details in [workflow run].

            [Workflow Run]: \${{ github.server_url }}/\${{ github.repository }}/actions/runs/\${{ github.run_id }}

            ------

            *Automatically created by projen via the "upgrade-nodejs-dependencies" workflow*
          branch: github-actions/upgrade-nodejs-dependencies
          title: "chore(deps): upgrade dependencies"
          labels: dependencies
          body: |-
            Upgrades project dependencies. See details in [workflow run].

            [Workflow Run]: \${{ github.server_url }}/\${{ github.repository }}/actions/runs/\${{ github.run_id }}

            ------

            *Automatically created by projen via the "upgrade-nodejs-dependencies" workflow*
          author: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
          committer: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
          signoff: true
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
.idea
*.iml
.vscode
.DS_Store
!/.github/workflows/pull-request-lint.yml
!/.github/workflows/upgrade-nodejs-dependencies.yml
!/.github/workflows/projen-synth.yml
!/.github/workflows/datadog-software-composition-analysis.yml
!/.github/workflows/datadog-static-analysis.yml
!/static-analysis.datadog.yaml
!/.github/workflows/build.yml
!/.github/workflows/lint.yml
",
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".gitattributes",
      ".github/workflows/build.yml",
      ".github/workflows/datadog-software-composition-analysis.yml",
      ".github/workflows/datadog-static-analysis.yml",
      ".github/workflows/lint.yml",
      ".github/workflows/projen-synth.yml",
      ".github/workflows/pull-request-lint.yml",
      ".github/workflows/upgrade-nodejs-dependencies.yml",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
      "static-analysis.datadog.yaml",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "compile": {
        "description": "Only compile",
        "name": "compile",
      },
      "default": {
        "description": "Synthesize project files",
        "name": "default",
        "steps": [
          {
            "exec": "node .projenrc.js",
          },
        ],
      },
      "package": {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
  "static-analysis.datadog.yaml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

schema-version: v1
rulesets:
  - apex-code-style
  - apex-security
  - csharp-best-practices
  - csharp-code-style
  - csharp-security
  - csharp-inclusive
  - docker-best-practices
  - github-actions
  - go-best-practices
  - go-inclusive
  - go-security
  - java-best-practices
  - java-code-style
  - java-security
  - javascript-best-practices
  - javascript-browser-security
  - javascript-code-style
  - javascript-inclusive
  - javascript-common-security
  - javascript-express
  - javascript-node-security
  - jsx-react
  - kotlin-security
  - kotlin-inclusive
  - kotlin-code-style
  - kotlin-best-practices
  - php-best-practices
  - php-security
  - python-best-practices
  - python-code-style
  - python-django
  - python-flask
  - python-inclusive
  - python-pandas
  - python-security
  - ruby-code-style
  - ruby-security
  - ruby-best-practices
  - rails-best-practices
  - swift-code-style
  - swift-security
  - swift-inclusive
  - tsx-react
  - typescript-best-practices
  - typescript-browser-security
  - typescript-code-style
  - typescript-common-security
  - typescript-express
  - typescript-inclusive
  - typescript-node-security
",
}
`;

exports[`GoProject with default settings > synthesizes 1`] = `
{
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

* text=auto eol=lf",
  ".github/workflows/build.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: build
on:
  push:
    branches:
      - main
  pull_request:
    types:
      - opened
      - edited
      - synchronize
      - reopened
    branches:
      - main
jobs:
  build:
    runs-on: ubuntu-latest
    permissions:
      contents: write
    outputs:
      patch_created: \${{ steps.create_patch.outputs.patch_created }}
    steps:
      - name: Checkout
        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd
        with:
          fetch-depth: 0
      - name: Set up Go
        uses: actions/setup-go@4b73464bb391d4059bd26b0524d20df3927bd417
        with:
          go-version: "1.25"
      - name: Format Code
        run: go fmt ./...
      - name: Find mutations
        id: create_patch
        run: |-
          git add .
          git diff --staged --patch --exit-code > repo.patch || echo "patch_created=true" >> $GITHUB_OUTPUT
        shell: bash
        working-directory: ./
      - name: Upload patch
        if: steps.create_patch.outputs.patch_created
        uses: actions/upload-artifact@v4.6.2
        with:
          name: repo.patch
          path: repo.patch
          overwrite: true
      - name: Build
        run: go build ./...
      - name: Tests
        run: go test -v ./...
      - name: Fail build on mutation
        if: steps.create_patch.outputs.patch_created
        run: |-
          echo "::error::Files were changed during build (see build log). If this was triggered from a fork, you will need to update your branch."
          cat repo.patch
          exit 1
  self-mutation:
    needs: build
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: always() && needs.build.outputs.patch_created && !(github.event.pull_request.head.repo.full_name != github.repository)
    steps:
      - name: Generate token
        id: generate_token
        uses: actions/create-github-app-token@3ff1caaa28b64c9cc276ce0a02e2ff584f3900c5
        with:
          app-id: \${{ secrets.PROJEN_APP_ID }}
          private-key: \${{ secrets.PROJEN_APP_PRIVATE_KEY }}
          permission-pull-requests: write
          permission-contents: write
      - name: Checkout
        uses: actions/checkout@v5
        with:
          token: \${{ steps.generate_token.outputs.token }}
          ref: \${{ github.event.pull_request.head.ref }}
          repository: \${{ github.event.pull_request.head.repo.full_name }}
      - name: Download patch
        uses: actions/download-artifact@v5
        with:
          name: repo.patch
          path: \${{ runner.temp }}
      - name: Apply patch
        run: '[ -s \${{ runner.temp }}/repo.patch ] && git apply \${{ runner.temp }}/repo.patch || echo "Empty patch. Skipping."'
      - name: Set git identity
        run: |-
          git config user.name "github-actions"
          git config user.email "github-actions@github.com"
      - name: Push changes
        env:
          PULL_REQUEST_REF: \${{ github.event.pull_request.head.ref }}
        run: |-
          git add .
          git commit -s -m "chore: self mutation"
          git push origin HEAD:$PULL_REQUEST_REF
",
  ".github/workflows/datadog-software-composition-analysis.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: Datadog-Software-Composition-Analysis
on:
  push: {}
jobs:
  software-composition-analysis:
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Checkout
        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd
        with:
          fetch-depth: 0
      - name: Check imported libraries are secure and compliant
        uses: DataDog/datadog-sca-github-action@d871ffeaa1a9693e935d5e66f7440782320e74ea
        with:
          dd_app_key: \${{ secrets.DD_APP_KEY }}
          dd_api_key: \${{ secrets.DD_API_KEY }}
          dd_site: datadoghq.eu
          dd_service: test-project
permissions: {}
",
  ".github/workflows/datadog-static-analysis.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: Datadog-Static-Analysis
on:
  push: {}
jobs:
  static-analysis:
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Checkout
        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd
        with:
          fetch-depth: 0
      - name: Check code meets quality and security standards
        uses: DataDog/datadog-static-analyzer-github-action@506d966f01f45874d7a53d00a0c300f650e91e39
        with:
          dd_app_key: \${{ secrets.DD_APP_KEY }}
          dd_api_key: \${{ secrets.DD_API_KEY }}
          dd_site: datadoghq.eu
          cpu_count: 2
          enable_performance_statistics: true
permissions: {}
",
  ".github/workflows/lint.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: lint
on:
  push:
    branches:
      - main
  pull_request:
    types:
      - opened
      - edited
      - synchronize
      - reopened
    branches:
      - main
jobs:
  lint:
    runs-on: ubuntu-latest
    permissions:
      contents: read
    steps:
      - name: Checkout
        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd
        with:
          fetch-depth: 0
      - name: Set up Go
        uses: actions/setup-go@4b73464bb391d4059bd26b0524d20df3927bd417
        with:
          go-version: "1.25"
      - name: Run golangci-lint
        uses: golangci/golangci-lint-action@1e7e51e771db61008b38414a730f564565cf7c20
        with:
          version: v2.10.1
",
  ".github/workflows/projen-synth.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: Projen-Synth
on:
  push:
    branches:
      - main
  pull_request:
    types:
      - opened
      - edited
      - synchronize
      - reopened
    branches:
      - main
jobs:
  build:
    runs-on: ubuntu-latest
    permissions:
      contents: write
      packages: read
    outputs:
      self_mutation_happened: \${{ steps.self_mutation.outputs.self_mutation_happened }}
    env:
      CI: "true"
    steps:
      - name: Checkout
        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd
        with:
          fetch-depth: 0
      - name: Setup pnpm
        uses: pnpm/action-setup@c5ba7f7862a0f64c1b1a05fbac13e0b8e86ba08c
        with:
          version: 11.0.0-alpha.12
      - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020
        with:
          node-version: 24.9.0
          registry-url: https://npm.pkg.github.com
          cache: pnpm
      - name: Install dependencies
        env:
          NODE_AUTH_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        run: pnpm i --frozen-lockfile
      - name: Run projen
        run: pnpm run projen
      - name: Find mutations
        id: self_mutation
        run: |-
          git add .
          git diff --staged --patch --exit-code > repo.patch || echo "self_mutation_happened=true" >> $GITHUB_OUTPUT
        shell: bash
        working-directory: ./
      - name: Upload patch
        if: steps.self_mutation.outputs.self_mutation_happened
        uses: actions/upload-artifact@v4.6.2
        with:
          name: repo.patch
          path: repo.patch
          overwrite: true
      - name: Fail build on mutation
        if: steps.self_mutation.outputs.self_mutation_happened
        run: |-
          echo "::error::Files were changed during build (see build log). If this was triggered from a fork, you will need to update your branch."
          cat repo.patch
          exit 1
  self-mutation:
    needs: build
    runs-on: ubuntu-latest
    permissions:
      contents: write
    if: always() && needs.build.outputs.self_mutation_happened && !(github.event.pull_request.head.repo.full_name != github.repository)
    steps:
      - name: Generate token
        id: generate_token
        uses: actions/create-github-app-token@3ff1caaa28b64c9cc276ce0a02e2ff584f3900c5
        with:
          app-id: \${{ secrets.PROJEN_APP_ID }}
          private-key: \${{ secrets.PROJEN_APP_PRIVATE_KEY }}
          permission-pull-requests: write
          permission-contents: write
          permission-workflows: write
      - name: Checkout
        uses: actions/checkout@v5
        with:
          token: \${{ steps.generate_token.outputs.token }}
          ref: \${{ github.event.pull_request.head.ref }}
          repository: \${{ github.event.pull_request.head.repo.full_name }}
      - name: Download patch
        uses: actions/download-artifact@v5
        with:
          name: repo.patch
          path: \${{ runner.temp }}
      - name: Apply patch
        run: '[ -s \${{ runner.temp }}/repo.patch ] && git apply \${{ runner.temp }}/repo.patch || echo "Empty patch. Skipping."'
      - name: Set git identity
        run: |-
          git config user.name "github-actions"
          git config user.email "github-actions@github.com"
      - name: Push changes
        env:
          PULL_REQUEST_REF: \${{ github.event.pull_request.head.ref }}
        run: |-
          git add .
          git commit -s -m "chore: self mutation"
          git push origin HEAD:$PULL_REQUEST_REF
",
  ".github/workflows/pull-request-lint.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: pull-request-lint
on:
  pull_request_target:
    types:
      - labeled
      - opened
      - synchronize
      - reopened
      - ready_for_review
      - edited
  merge_group: {}
jobs:
  validate:
    name: Validate PR title
    runs-on: ubuntu-latest
    permissions:
      pull-requests: write
    if: (github.event_name == 'pull_request' || github.event_name == 'pull_request_target')
    steps:
      - uses: amannn/action-semantic-pull-request@v6
        env:
          GITHUB_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        with:
          types: |-
            feat
            fix
            chore
            refactor
            build
            docs
            ci
            perf
            style
            test
          requireScope: true
",
  ".github/workflows/upgrade-nodejs-dependencies.yml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

name: Upgrade-NodeJS-dependencies
on:
  workflow_dispatch: {}
  schedule:
    - cron: 0 0 3 * *
jobs:
  upgrade:
    runs-on: ubuntu-latest
    permissions:
      contents: read
      packages: read
    outputs:
      patch_created: \${{ steps.create_patch.outputs.patch_created }}
    steps:
      - name: Checkout
        uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd
        with:
          fetch-depth: 0
      - name: Setup pnpm
        uses: pnpm/action-setup@c5ba7f7862a0f64c1b1a05fbac13e0b8e86ba08c
        with:
          version: 11.0.0-alpha.12
      - uses: actions/setup-node@49933ea5288caeca8642d1e84afbd3f7d6820020
        with:
          node-version: 24.9.0
          registry-url: https://npm.pkg.github.com
          cache: pnpm
      - name: Install dependencies
        env:
          NODE_AUTH_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        run: pnpm i --frozen-lockfile
      - name: Upgrade dependencies
        env:
          NODE_AUTH_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        run: pnpm dlx npm-check-updates@19 --upgrade --target=latest
      - name: Install dependencies
        env:
          NODE_AUTH_TOKEN: \${{ secrets.GITHUB_TOKEN }}
        run: pnpm i --no-frozen-lockfile
      - name: Run projen
        run: pnpm run projen
      - name: Find mutations
        id: create_patch
        run: |-
          git add .
          git diff --staged --patch --exit-code > repo.patch || echo "patch_created=true" >> $GITHUB_OUTPUT
        shell: bash
        working-directory: ./
      - name: Upload patch
        if: steps.create_patch.outputs.patch_created
        uses: actions/upload-artifact@v4.6.2
        with:
          name: repo.patch
          path: repo.patch
          overwrite: true
  pr:
    name: Create Pull Request
    needs: upgrade
    runs-on: ubuntu-latest
    permissions:
      contents: read
    if: \${{ needs.upgrade.outputs.patch_created }}
    steps:
      - name: Generate token
        id: generate_token
        uses: actions/create-github-app-token@3ff1caaa28b64c9cc276ce0a02e2ff584f3900c5
        with:
          app-id: \${{ secrets.PROJEN_APP_ID }}
          private-key: \${{ secrets.PROJEN_APP_PRIVATE_KEY }}
      - name: Checkout
        uses: actions/checkout@v5
      - name: Download patch
        uses: actions/download-artifact@v5
        with:
          name: repo.patch
          path: \${{ runner.temp }}
      - name: Apply patch
        run: '[ -s \${{ runner.temp }}/repo.patch ] && git apply \${{ runner.temp }}/repo.patch || echo "Empty patch. Skipping."'
      - name: Set git identity
        run: |-
          git config user.name "github-actions[bot]"
          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
      - name: Create Pull Request
        id: create-pr
        uses: peter-evans/create-pull-request@v7
        with:
          token: \${{ steps.generate_token.outputs.token }}
          commit-message: |-
            chore(deps): upgrade dependencies

            Upgrades project dependencies. See details in [workflow run].

            [Workflow Run]: \${{ github.server_url }}/\${{ github.repository }}/actions/runs/\${{ github.run_id }}

            ------

            *Automatically created by projen via the "upgrade-nodejs-dependencies" workflow*
          branch: github-actions/upgrade-nodejs-dependencies
          title: "chore(deps): upgrade dependencies"
          labels: dependencies
          body: |-
            Upgrades project dependencies. See details in [workflow run].

            [Workflow Run]: \${{ github.server_url }}/\${{ github.repository }}/actions/runs/\${{ github.run_id }}

            ------

            *Automatically created by projen via the "upgrade-nodejs-dependencies" workflow*
          author: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
          committer: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
          signoff: true
",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
.idea
*.iml
.vscode
.DS_Store
!/.github/workflows/pull-request-lint.yml
!/.github/workflows/upgrade-nodejs-dependencies.yml
!/.github/workflows/projen-synth.yml
!/.github/workflows/datadog-software-composition-analysis.yml
!/.github/workflows/datadog-static-analysis.yml
!/static-analysis.datadog.yaml
!/.github/workflows/build.yml
!/.github/workflows/lint.yml
",
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".gitattributes",
      ".github/workflows/build.yml",
      ".github/workflows/datadog-software-composition-analysis.yml",
      ".github/workflows/datadog-static-analysis.yml",
      ".github/workflows/lint.yml",
      ".github/workflows/projen-synth.yml",
      ".github/workflows/pull-request-lint.yml",
      ".github/workflows/upgrade-nodejs-dependencies.yml",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
      "static-analysis.datadog.yaml",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "compile": {
        "description": "Only compile",
        "name": "compile",
      },
      "default": {
        "description": "Synthesize project files",
        "name": "default",
        "steps": [
          {
            "exec": "node .projenrc.js",
          },
        ],
      },
      "package": {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
  "static-analysis.datadog.yaml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

schema-version: v1
rulesets:
  - apex-code-style
  - apex-security
  - csharp-best-practices
  - csharp-code-style
  - csharp-security
  - csharp-inclusive
  - docker-best-practices
  - github-actions
  - go-best-practices
  - go-inclusive
  - go-security
  - java-best-practices
  - java-code-style
  - java-security
  - javascript-best-practices
  - javascript-browser-security
  - javascript-code-style
  - javascript-inclusive
  - javascript-common-security
  - javascript-express
  - javascript-node-security
  - jsx-react
  - kotlin-security
  - kotlin-inclusive
  - kotlin-code-style
  - kotlin-best-practices
  - php-best-practices
  - php-security
  - python-best-practices
  - python-code-style
  - python-django
  - python-flask
  - python-inclusive
  - python-pandas
  - python-security
  - ruby-code-style
  - ruby-security
  - ruby-best-practices
  - rails-best-practices
  - swift-code-style
  - swift-security
  - swift-inclusive
  - tsx-react
  - typescript-best-practices
  - typescript-browser-security
  - typescript-code-style
  - typescript-common-security
  - typescript-express
  - typescript-inclusive
  - typescript-node-security
",
}
`;
